// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emit asserts for:  output match: FormattedMessage 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": "The default message.",
      "id": "foo.bar.baz",
    },
  ],
  "meta": Object {},
}
`;

exports[`emit asserts for:  output match: FormattedMessage 2`] = `
"import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />;
  }

}"
`;

exports[`emit asserts for:  output match: FormattedMessage 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message.",
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: defineMessage 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": "The default message",
      "id": "foo.bar.baz",
    },
    Object {
      "defaultMessage": "Hello Nurse!",
      "description": "Another message",
      "id": "foo.bar.biff",
    },
    Object {
      "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
      "description": "Counts kittens",
      "id": "app.home.kittens",
    },
    Object {
      "defaultMessage": "   Some whitespace   ",
      "description": "Whitespace",
      "id": "trailing.ws",
    },
    Object {
      "defaultMessage": "A quoted value ''{value}'",
      "description": "Escaped apostrophe",
      "id": "escaped.apostrophe",
    },
  ],
  "meta": Object {
    "project": "amazing",
  },
}
`;

exports[`emit asserts for:  output match: defineMessage 2`] = `
"// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessage, FormattedMessage } from 'react-intl';
const msgs = {
  header: defineMessage({
    \\"id\\": \\"foo.bar.baz\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  }),
  content: defineMessage({
    \\"id\\": \\"foo.bar.biff\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  }),
  kittens: defineMessage({
    \\"id\\": \\"app.home.kittens\\",
    \\"defaultMessage\\": \\"{count, plural, =0 {\\\\uD83D\\\\uDE2D} one {# kitten} other {# kittens}}\\"
  }),
  trailingWhitespace: defineMessage({
    \\"id\\": \\"trailing.ws\\",
    \\"defaultMessage\\": \\"   Some whitespace   \\"
  }),
  escaped: defineMessage({
    \\"id\\": \\"escaped.apostrophe\\",
    \\"defaultMessage\\": \\"A quoted value ''{value}'\\"
  })
};
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <p>
          <FormattedMessage {...msgs.kittens} />
        </p>
      </div>;
  }

}"
`;

exports[`emit asserts for:  output match: defineMessage 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
]
`;

exports[`emit asserts for:  output match: defineMessages 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": "The default message",
      "id": "foo.bar.baz",
    },
    Object {
      "defaultMessage": "Hello Nurse!",
      "description": "Another message",
      "id": "foo.bar.biff",
    },
    Object {
      "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
      "description": "Counts kittens",
      "id": "app.home.kittens",
    },
    Object {
      "defaultMessage": "   Some whitespace   ",
      "description": "Whitespace",
      "id": "trailing.ws",
    },
    Object {
      "defaultMessage": "A quoted value ''{value}'",
      "description": "Escaped apostrophe",
      "id": "escaped.apostrophe",
    },
  ],
  "meta": Object {
    "project": "amazing",
  },
}
`;

exports[`emit asserts for:  output match: defineMessages 2`] = `
"// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
  header: {
    \\"id\\": \\"foo.bar.baz\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"foo.bar.biff\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  },
  kittens: {
    \\"id\\": \\"app.home.kittens\\",
    \\"defaultMessage\\": \\"{count, plural, =0 {\\\\uD83D\\\\uDE2D} one {# kitten} other {# kittens}}\\"
  },
  trailingWhitespace: {
    \\"id\\": \\"trailing.ws\\",
    \\"defaultMessage\\": \\"   Some whitespace   \\"
  },
  escaped: {
    \\"id\\": \\"escaped.apostrophe\\",
    \\"defaultMessage\\": \\"A quoted value ''{value}'\\"
  }
});
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <p>
          <FormattedMessage {...msgs.kittens} />
        </p>
      </div>;
  }

}"
`;

exports[`emit asserts for:  output match: defineMessages 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
]
`;

exports[`emit asserts for:  output match: descriptionsAsObjects 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": Object {
        "metadata": "Additional metadata content.",
        "text": "Something for the translator.",
      },
      "id": "foo.bar.baz",
    },
  ],
  "meta": Object {
    "project": "amazing2",
  },
}
`;

exports[`emit asserts for:  output match: descriptionsAsObjects 2`] = `
"import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl'; // @react-intl project:amazing2

export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />;
  }

}"
`;

exports[`emit asserts for:  output match: descriptionsAsObjects 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": Object {
      "metadata": "Additional metadata content.",
      "text": "Something for the translator.",
    },
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: enforceDefaultMessage 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": undefined,
      "description": undefined,
      "id": "TRANSLATION_KEY",
    },
    Object {
      "defaultMessage": undefined,
      "description": undefined,
      "id": "foo.bar.baz",
    },
  ],
  "meta": Object {},
}
`;

exports[`emit asserts for:  output match: enforceDefaultMessage 2`] = `
"import React, { Component } from 'react';
import { FormattedMessage, defineMessages } from 'react-intl';
defineMessages({
  test: {
    \\"id\\": \\"TRANSLATION_KEY\\"
  }
});
const testMessage = {
  id: 'TRANSLATION_KEY2'
};
export default class Foo extends Component {
  render() {
    return <>
        <FormattedMessage id=\\"foo.bar.baz\\" />
        <FormattedMessage {...testMessage} />
      </>;
  }

}"
`;

exports[`emit asserts for:  output match: enforceDefaultMessage 3`] = `
Array [
  Object {
    "id": "TRANSLATION_KEY",
  },
  Object {
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: enforceDescriptions 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": undefined,
      "id": "foo.bar.baz",
    },
  ],
  "meta": Object {},
}
`;

exports[`emit asserts for:  output match: enforceDescriptions 2`] = `
"import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />;
  }

}"
`;

exports[`emit asserts for:  output match: enforceDescriptions 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: formatMessageCall 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "bar",
      "description": "baz",
      "id": "foo",
    },
  ],
  "meta": Object {},
}
`;

exports[`emit asserts for:  output match: formatMessageCall 2`] = `
"import React, { Component } from 'react';
import { injectIntl, FormattedMessage } from 'react-intl';
const objectPointer = {
  id: 'foo.bar.invalid',
  defaultMessage: 'This cannot be extracted',
  description: 'the plugin only supports inline objects'
};

class Foo extends Component {
  render() {
    const msgs = {
      baz: this.props.intl.formatMessage({
        id: 'foo.bar.baz',
        defaultMessage: 'Hello World!',
        description: 'The default message'
      }),
      biff: this.props.intl.formatMessage({
        id: 'foo.bar.biff',
        defaultMessage: 'Hello Nurse!',
        description: 'Another message'
      }),
      invalid: this.props.intl.formatMessage(objectPointer)
    };
    return <div>
        <h1>{msgs.header}</h1>
        <p>{msgs.content}</p>
        <span>
          <FormattedMessage id=\\"foo\\" defaultMessage=\\"bar\\" />
        </span>
      </div>;
  }

}

export default injectIntl(Foo);"
`;

exports[`emit asserts for:  output match: formatMessageCall 3`] = `
Array [
  Object {
    "defaultMessage": "bar",
    "description": "baz",
    "id": "foo",
  },
]
`;

exports[`options additionalComponentNames 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "Greeting to the world",
    "id": "greeting-world",
  },
]
`;

exports[`options correctly overrides the id when overrideIdFn is provided 1`] = `
"import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
  header: {
    \\"id\\": \\"actual.js.foo.bar.baz.12.string\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"actual.js.foo.bar.biff.12.object\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  }
});
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <FormattedMessage id=\\"actual.js.foo.bar.zoo.12.object\\" defaultMessage=\\"Hello World!\\" />
        <FormattedMessage id=\\"actual.js..5.object\\" defaultMessage=\\"NO ID\\" />
      </div>;
  }

}"
`;

exports[`options correctly overrides the id when overrideIdFn is provided 2`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "actual.js.foo.bar.baz.12.string",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": Object {
      "metadata": "Additional metadata content.",
      "text": "Something for the translator.",
    },
    "id": "actual.js.foo.bar.biff.12.object",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": Object {
      "metadata": "Additional metadata content.",
      "text": "Something for the translator. Another description",
    },
    "id": "actual.js.foo.bar.zoo.12.object",
  },
  Object {
    "defaultMessage": "NO ID",
    "description": Object {
      "metadata": "Additional metadata content.",
      "text": "Something for the translator. Another description",
    },
    "id": "actual.js..5.object",
  },
]
`;

exports[`options outputEmptyJson should output empty files 1`] = `
"import React, { Component } from 'react';
import { defineMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <div></div>;
  }

}"
`;

exports[`options outputEmptyJson should output empty files 2`] = `Array []`;

exports[`options removeDefaultMessage should remove default message 1`] = `
"import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const messages = defineMessages({
  foo: {
    \\"id\\": \\"greeting-user\\"
  }
});
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"greeting-world\\" />;
  }

}"
`;

exports[`options removeDefaultMessage should remove default message 2`] = `
Array [
  Object {
    "defaultMessage": "Hello, {name}",
    "description": "Greeting the user",
    "id": "greeting-user",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "Greeting to the world",
    "id": "greeting-world",
  },
]
`;

exports[`options respects extractFromFormatMessageCall 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "Hello Stranger!",
    "description": "A different message",
    "id": "foo.bar.qux",
  },
  Object {
    "defaultMessage": "bar",
    "description": "baz",
    "id": "foo",
  },
]
`;

exports[`options respects extractFromFormatMessageCall from stateless components 1`] = `
Array [
  Object {
    "defaultMessage": "hook <b>foo</b>",
    "description": "hook",
    "id": "hook",
  },
  Object {
    "defaultMessage": "bar",
    "description": "baz",
    "id": "foo",
  },
]
`;

exports[`options respects extractSourceLocation 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "end": Object {
      "column": 78,
      "line": 6,
    },
    "file": "packages@@sep@@babel-plugin-react-intl@@sep@@tests@@sep@@fixtures@@sep@@extractSourceLocation@@sep@@actual.js",
    "id": "foo.bar.baz",
    "start": Object {
      "column": 11,
      "line": 6,
    },
  },
]
`;

exports[`options respects moduleSourceName 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message.",
    "id": "foo.bar.baz",
  },
]
`;

exports[`options should be able to parse inline defineMessage from react-intl 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message.",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "header",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "header2",
  },
]
`;

exports[`options without outputEmptyJson should output empty files 1`] = `
"import React, { Component } from 'react';
import { defineMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <div></div>;
  }

}"
`;
